--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,9 +1,6 @@
 <div>
   <button>
-    <img
-      [src]="'assets/users/' + selectedUser.avatar"
-      [alt]="selectedUser.name"
-    />
+    <img [src]="ImagePath" [alt]="selectedUser.name" />
     <span>{{ selectedUser.name }}</span>
   </button>
 </div>
