--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,5 @@
 <div>
-  <button>
+  <button (click)="onSelectUser()">
     <img [src]="ImagePath" [alt]="selectedUser.name" />
     <span>{{ selectedUser.name }}</span>
   </button>
