Defining Component Inputs

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,6 @@
 <div>
   <button (click)="onSelectUser()">
-    <img [src]="ImagePath" [alt]="selectedUser.name" />
-    <span>{{ selectedUser.name }}</span>
+    <img [src]="ImagePath" [alt]="name" />
+    <span>{{ name }}</span>
   </button>
 </div>
