--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     }
   </ul>
   @if(selectedUser){
-  <app-tasks [name]="selectedUser.name"></app-tasks>
+  <app-tasks [name]="selectedUser.name" [userid]="selectedUser.id"></app-tasks>
   } @else {
   <p id="fallback">Select a user to see their tasks</p>
   }
