--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -6,14 +6,10 @@
     </menu>
   </header>
   <ul>
+    @for(task of selectedUserTasks; track task.userId){
     <li>
       <app-task />
     </li>
-    <li>
-      <app-task />
-    </li>
-    <li>
-      <app-task />
-    </li>
+    }
   </ul>
 </section>
