--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,6 +1,5 @@
 @if(isAddingTask){
-<app-new-task (cancel)="onCancelAddTask()" (add)="onAddTask($event)" />
-}
+<app-new-task [userId]="userid" (close)="onCloseAddTask()" /> }
 <section id="tasks">
   <header>
     <h2>{{ name }}'s Tasks</h2>
